--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -81,6 +81,8 @@ header nav a {
     font-size: 15px;
     padding: 5px;
     font-weight: bold;
+    transition: all 600ms;
+
     /* Flex */
     flex-grow: 1;
 }
@@ -219,11 +221,11 @@ footer .lista a i{
 /* ========= */
 /* Pagina 3 ADOPTA */
 /* ========= */
-
-.titulo-adopta {
+.titulo,
+.titulo-adopta{
     width: 100%;
-    background-color: rgb(102, 98, 98);
-    padding: 15px;
+    background-color: rgb(82, 78, 78);
+    padding: 30px;
     color: #fff;
 }
 
@@ -248,21 +250,126 @@ footer .lista a i{
     border-top: 1px solid black;
     /* Flex */
     display: flex;
-
+    flex-flow: row wrap;
+    padding: 20px 15%;
 }
 
 .pagina3 section article {
     flex: 1;
     text-align: center;
+    margin-top: 70px;
     /* border: 1px solid black; */
 }
 
-.pagina3 section article .p3-foto {
-    height: 60px;
-    width: 80px;
-    background-color: red;
+.pagina3 section article a h4 {
+    /* width: 50%; */
+    margin: auto;
+    margin-bottom: 10px;
+}
+.pagina3 section article a{
+    color: rgba(41, 39, 39, 0.89);
+}
+.pagina3 section article a:hover {
+    text-decoration: none;
+    color: rgba(234, 105, 39, 1);
+    transition: all 300ms;
 }
 
-.p3-carta {
-    background-color: #fff;
+/* .p3-carta {
+} */
+/* ========== */
+/* PAGINA 4 */
+/* ========== */
+.pagina4 .fondo {
+    display: block;
+    margin: 10px auto;
+    border: 1px solid black;
+}
+
+.pagina4 section {
+    width: 100%;
+    padding: 10px;
+
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+
+    /* border: 1px solid black; */
+    
+}
+.pagina4 section article h4{
+    text-align: center;
+}
+
+/* Pagina Contacto */
+
+.formulario {
+    width: 90%;
+    /* height: 40px; */
+    margin: 10px auto;
+    /* background: red; */
+    /* border: 1px solid black; */
+
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.formulario .interiorformulario{
+    width: 50%;
+    padding: 10px;
+    /* border-right: 1px solid black; */
+    /* height: 20px; */
+
+}
+.formulario .interiorformulario form input ,
+.formulario .interiorformulario form textarea {
+    width: 95%;
+    resize: none;
+}
+
+.formulario .dos ul{
+    margin-top: 8%;
+}
+
+.formulario .dos ul li{
+    margin-bottom: 10px;
+}
+
+.pagina6 section {
+    display: flex;
+    flex-flow: row wrap;
+    /* border: 1px solid black; */
+}
+
+.pagina6 section article {
+    width: 20%;
+    flex: 1;
+}
+
+.pagina6 section article h5{
+    text-align: center;
+}
+
+.pagina6 section article ul li a {
+    color: rgba(234, 105, 39, 1);
+}
+.pagina6 section article ul li a:hover{
+    color: rgba(234, 105, 39, 1);
+    text-decoration: none;
+}
+
+
+nav .bloqueada {
+    background-color: rgba(49, 45, 45, 0.891);
+    outline: 1px solid rgb(255, 111, 0);
+}
+
+nav .bloqueada:hover {
+    color: rgb(255, 111, 0);
+    background-color: rgba(49, 45, 45, 0.891);
+    outline: 1px solid rgb(255, 111, 0);
+    color: gray;
+    text-decoration: line-through;
 }
